--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Surprise</title>
 </head>
 
-<body>
+<body style="margin: 0; padding: 0; overflow-x: hidden;">
 <div id="root">
     <h1>Not Rendered</h1>
 </div>
